--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,26 @@
 /* #1f2324 */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Oswald:wght@200..700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body, html {
     height: 100%;
-    font-family: Arial, sans-serif;
 }
 
 .header {
     position: relative;
-    height: 100vh; /* Full viewport height for demonstration */
+    height: 100vh;
 }
+
+/* .header > .navbar {
+    font-family: 'Oswald', sans-serif;
+} */
+
 
 .background-image {
     background-image: url('https://shorturl.at/WYMlx'); /* Path to your background image */
@@ -33,7 +37,7 @@ body, html {
 .buttons{
     color: pink;
     margin-top: 25.5rem;
-    margin-left: 8rem;
+    margin-left: 7.5rem;
     /* border: 2px solid red; */
     height: 5rem;
     /* padding: 2rem 5rem; */
@@ -51,11 +55,11 @@ body, html {
     background-color: rgba(0, 0, 0, 0.0); /* Semi-transparent background */
     border: none;
     cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    transition: 0.3s ease;
 }
 
 .buttons>button:not(.button1):hover{
-    color: white;
+    color: blue;
 }
 
 .button1{
@@ -68,7 +72,7 @@ body, html {
     border-radius: 20px;
     border: none;
     color: white;
-    transition:  0.3s ease, transform 0.3s ease;
+    transition:  0.3s ease;
 }
 
 .button1:hover{
@@ -117,9 +121,11 @@ body, html {
 
 .testing{
     color: red;
-    margin-top: 5em;
+    margin-top: 5rem;
+    font-size: 2.5rem;
     /* margin-left: 36rem; */
-    border: 2px solid aqua;
+    /* border: 2px solid aqua; */
     display: flex;
     justify-content: center;
+    font-family: Oswald, sans-serif;
 }
