--- a/css/style.css
+++ b/css/style.css
@@ -120,12 +120,39 @@ body, html {
 }
 
 .testing{
-    color: red;
     margin-top: 5rem;
-    font-size: 2.5rem;
     /* margin-left: 36rem; */
     /* border: 2px solid aqua; */
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid red;
+    margin-bottom: 3rem;
+}
+
+.testing > h1{
+    color: red;
+    font-size: 2.5rem;
     font-family: Oswald, sans-serif;
+    text-decoration: underline;
+    margin-bottom: 3rem;
+}
+
+.list-of-fun > ul{
+    /* border: 2px solid orange; */
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    list-style: none;
+}
+
+.list-of-fun > ul > li > div{
+    /* border: 2px solid palevioletred; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    color: blue;
+
 }
